--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
   <button (click)="toPasswordCrack()">
     Password Crack
   </button>
-  <button>
+  <button (click)="toMemoryMapper()">
     Memory Mapper
   </button>
 </div>
