Random string while waiting for result

--- a/src/app/password-cracker/password-cracker.component.html
+++ b/src/app/password-cracker/password-cracker.component.html
@@ -1,6 +1,11 @@
 <div class="TextView">
-
-  <table>
+  <table *ngIf="show">
+    <tr>
+      <td *ngFor="let char of tempstr">
+        {{char}}</td>
+    </tr>
+  </table>
+  <table *ngIf="!show">
     <tr>
       <td *ngFor="let char of str">
         {{char}}</td>
