--- a/src/app/memory-mapper/memory-mapper.component.html
+++ b/src/app/memory-mapper/memory-mapper.component.html
@@ -1,7 +1,10 @@
 <div class="window">
-  <p>welcome to ROBCO Industries (TM) Termlink</p>
-  <p>Password required</p>
-  <br />
+  <div class="intro">
+    <p>welcome to ROBCO Industries (TM) Termlink</p>
+    <p>Password required</p>
+    <br />
+  </div>
+
   <div class="attempt">
     <p>Attempts remained:</p>
     <div class="bars">
@@ -11,23 +14,15 @@
       <span *ngIf="attemptsRemained > 3"></span>
     </div>
   </div>
-  <div>
+  <div class="container">
     <table>
       <tr *ngFor="let row of firstRows; index as i">
         <td>{{row.rowNumber}}</td>
-        <td><button *ngFor="let char of row.char">{{char.char}}</button></td>
+        <td><button class="pbutton" *ngFor="let char of row.char">{{char.char}}</button></td>
         <td style="padding-left: 20px;">{{secondRows[i].rowNumber}}</td>
-        <td><button *ngFor="let char of secondRows[i].char">{{char.char}}</button></td>
+        <td><button class="pbutton" *ngFor="let char of secondRows[i].char">{{char.char}}</button></td>
       </tr>
     </table>
-    <div class="terminal">
-        <div class="output">
-            <div class="line" *ngFor="let line of terminal">
-              <span *ngFor="let char of line">{{char.char}}</span>
-            </div>
-          </div>
-          <label>&gt;</label><input type="text" [(ngModel)]="in" (keyup.enter)="submit()"/>
-    </div>
-    
+    <app-terminal class="terminal" (out)="onTerminalInput($event)"></app-terminal>
   </div>
 </div>
