--- a/src/app/memory-mapper/memory-mapper.component.html
+++ b/src/app/memory-mapper/memory-mapper.component.html
@@ -14,7 +14,7 @@
       <span *ngIf="attemptsRemained > 3"></span>
     </div>
   </div>
-  <div class="container">
+  <div class="container" *ngIf="loaded">
     <table>
       <tr *ngFor="let row of firstRows; index as i">
         <td>{{row.rowNumber}}</td>
