--- a/src/app/private/private.component.html
+++ b/src/app/private/private.component.html
@@ -13,8 +13,8 @@ drwxr-xr-x 2 user user 4096 ápr   22 23:39 System32
 <div>
   <p>total 20</p>
 </div>
-<table>
-  <tr class="line" *ngFor="let line of list">
+<table *ngIf="loaded">
+  <tr class="line" *ngFor="let line of list" (click)="exit()">
     <td>{{line[0]}}</td>
     <td>{{line[1]}}</td>
     <td>{{line[2]}}</td>
