--- a/src/app/memory-mapper/terminal/terminal.component.css
+++ b/src/app/memory-mapper/terminal/terminal.component.css
@@ -6,6 +6,7 @@ textarea, input {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: 14pt;
+    overflow: hidden;
 }
 
 .output{
