--- a/src/app/memory-mapper/terminal/terminal.component.html
+++ b/src/app/memory-mapper/terminal/terminal.component.html
@@ -1,8 +1,8 @@
 <div class="terminal">
-  <textarea rows="15" cols="40" readonly>{{output}}</textarea>
+  <textarea id="output" rows="auto" cols="40" readonly>{{output}}</textarea>
   <div>
     <label>C:/</label>
-    <textarea rows="2" cols="40" autofocus class="prompt" maxlength="90"(keyup.enter)="add()"
-      [(ngModel)]="inputText"></textarea>
+    <textarea cols="40" autofocus class="prompt" maxlength="90" (keyup.enter)="add()"
+      [(ngModel)]="_inputText"></textarea>
   </div>
 </div>
