--- a/src/app/memory-mapper/memory-mapper.component.css
+++ b/src/app/memory-mapper/memory-mapper.component.css
@@ -47,13 +47,15 @@ button:hover{
 
 table{
     position: relative;
-    float: left;
+    width: 40%;
     display: block;
+    float: left;
 }
 
 .terminal {
     position: relative;
-    float: right;
+    float: left;
+    width: fit-content;
 }
 
 .container{
