--- a/src/app/password-cracker/password-cracker.component.html
+++ b/src/app/password-cracker/password-cracker.component.html
@@ -1,4 +1,4 @@
-<div class="TextView">
+<div class="TextView" (keydown.enter)="getInput()">
   <table *ngIf="show">
     <tr>
       <td *ngFor="let char of tempstr">
