--- a/src/app/memory-mapper/memory-mapper.component.css
+++ b/src/app/memory-mapper/memory-mapper.component.css
@@ -8,7 +8,7 @@
 .window{
     position: relative;
     top: 20px;
-    width: 80%;
+    width: fit-content;
     left: 10%;
 }
 
@@ -47,7 +47,7 @@ button:hover{
 
 table{
     position: relative;
-    width: 40%;
+    width: 500px;
     display: block;
     float: left;
 }
@@ -60,7 +60,7 @@ table{
 
 .container{
     position: relative;
-    width: 100%;
+    width: fit-content;
     display: inline-block;
 }
 
