--- a/src/app/password-cracker/password-cracker.component.css
+++ b/src/app/password-cracker/password-cracker.component.css
@@ -1,10 +1,10 @@
-.TextView{
+.cracker{
     position: relative;
     top: 25%;
     left: 30%;
 }
 
-.TextView table{
+.cracker table{
     border-style: solid;
     border-color: rgb(0,255,0);
     text-align: center;
@@ -12,7 +12,7 @@
     overflow: hidden;
 }
 
-.TextView button{
+.cracker button{
     position: relative;
     width: 30%;
     left: 10%;
