--- a/src/app/password-cracker/password-cracker.component.html
+++ b/src/app/password-cracker/password-cracker.component.html
@@ -1,4 +1,4 @@
-<div class="TextView" (keydown.enter)="getInput()">
+<div class="cracker" (keydown.enter)="getInput()">
   <table *ngIf="show">
     <tr>
       <td *ngFor="let char of tempstr">
@@ -11,7 +11,7 @@
         {{char}}</td>
     </tr>
   </table>
-  <button (click)="crack()">
+  <!--<button (click)="crack()">
     start password crack
-  </button>
+  </button>-->
 </div>
