--- a/src/app/private/private.component.html
+++ b/src/app/private/private.component.html
@@ -10,7 +10,7 @@ drwxr-xr-x 2 user user 4096 ápr   22 23:39 System32
 -rw-r--r-- 1 user user    0 ápr   22 23:39 veryveryveryimportantdata.data
 
 -->
-<div>
+<!--<div>
   <p>total 20</p>
 </div>
 <table *ngIf="loaded">
@@ -25,4 +25,4 @@ drwxr-xr-x 2 user user 4096 ápr   22 23:39 System32
     <td>{{line[7]}}</td>
     <td>{{line[8]}}</td>
   </tr>
-</table>
+</table>-->
