--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div >
+<div>
     <router-outlet></router-outlet>
-    <app-terminal></app-terminal>
+    <app-terminal (easterEgg)="easterEgg"></app-terminal>
 </div>
